# lotto-polybot

./: .env.example  CLAUDE.md  Cargo.toml  README.md  development.md  plan-2.md  requirements-2.md  skill.md
.github/workflows/: ci.yml
benches/: hot_path.rs  parse_latency.rs
codereviews/: agent1codereview.md  agent1codereview2.md  codereviewfixtracker.md  codereviewfixtracker2.md
docs/: go-nogo-review.md  runbooks.md  standby-model.md
scripts/: check.sh  run-benchmark.sh  run-live.sh  run-replay.sh  run-shadow.sh  run-sim.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  shutdown.rs  types.rs
src/benchmark/: harness.rs
src/discovery/: cache.rs  gamma.rs  mod.rs
src/domain/: contract.rs  ledger.rs  market.rs  mod.rs  order.rs  position.rs  signal.rs
src/execution/: cancel_policy.rs  client.rs  fill_state.rs  intents.rs  mod.rs  reconciliation.rs  signer.rs  submit.rs
src/feeds/: binance.rs  coinbase.rs  health.rs  mod.rs  normalization.rs  polymarket_market.rs  polymarket_rtds.rs  polymarket_user.rs
src/replay/: mod.rs  recorder.rs  runner.rs  scenarios.rs
src/resolution/: fetcher.rs  mod.rs  verifier.rs
src/risk/: contract_lock.rs  drawdown.rs  kill_switch.rs  limits.rs  mod.rs
src/simulation/: engine.rs  evaluation.rs  mod.rs  shadow.rs
src/strategy/: edge.rs  fair_value.rs  filters.rs  mod.rs  pipeline.rs  sizing.rs
src/telemetry/: dashboard.rs  histograms.rs  ledger.rs  logging.rs  mod.rs  persistence.rs
src/validation/: comparison.rs  live_guard.rs  mod.rs
